syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message Request {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message Response {
    int32 serverValue = 1;
}

service ServerService {
    rpc generateValues(Request) returns (stream Response);
}
